app/src/main/resources/grammar.txt
program
  := statement* EOF

statement
  := project
  | compiler
  | sources
  | includes
  | output
  | target
  | cflags
  | ldflags
  | linkerflags

project
  := PROJECT STRING

compiler
  := COMPILER IDENT

sources
  := SOURCES "{" IDENT* "}"

includes
  := INCLUDES "{" IDENT* "}"

output
  := OUTPUT IDENT

target
  := TARGET IDENT

cflags
  := CFLAGS "{" IDENT* "}"

ldflags
  := LDFLAGS "{" IDENT* "}"

linkerflags
  := LINKERFLAGS "{" IDENT* "}"
